data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1183.wast
;; 4. **Test 4: Loop with Branch Table and Function Call**:    - A loop containing a `br_table` instruction that calls different imported functions based on an index.    - **Constraint Checked**: Ensures the br_table correctly resolves to the appropriate function call, maintaining stack integrity across jumps.    - **Relevance**: Tests precise branching logic in loops with indirect branching to imported functions.

(assert_invalid
  (module
    (import "env" "func0" (func $func0 (param i32) (result i32)))
    (import "env" "func1" (func $func1 (param i32) (result i32)))
    (func (param i32) (result i32)
      (loop (result i32)
        (br_table 0 1 (local.get 0))
        (call $func0 (local.get 0))
        (call $func1 (local.get 0))
        (drop)
      )
    )
  )
  "type mismatch"
)